[package]
name = "ordnl"
version = "1.0.2"
authors = ["Kirk Louie Guinto <kirklouieguinto@gmail.com>"]
edition = "2018"
description = "A Rust library for formatting ordinal numbers"
homepage = "https://crates.io/crates/ordnl"
repository = "https://github.com/kguinto/ordnl"
documentation = "https://docs.rs/ordnl/"
license = "MIT"
readme = "README.md"
